tests/derive_arc/fails/receiver_self.stderr
error: cannot derive `Arc` for a trait declaring `self` methods
 --> $DIR/receiver_self.rs:7:16
  |
7 |     fn extract(self);
  |                ^^^^
